--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Кошка Домашняя </title>
-	<link rel="stylesheet" href="style1.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body style="background-color: #e6e6ff">
 	<nav class="menu">
