--- a/index.html
+++ b/index.html
@@ -75,11 +75,10 @@
 	</ul>
 	<div class="photos-block">
 		
-		<img src="2.jpg" alt="Египетская" title="Египетская Мау" />|
-		<img src="3.jpg" alt="Бирманская" title="Бирманская кошка"/>|
-		<img src="4.jpg" alt="Персидская" title="Персидская кошка"/>|
-		<img src="5.jpg" alt="Сиамская" title="Сиамская кошка"/><br>
-		<button>Нажми на меня</button>
+		<img src="images/2.jpg" alt="Египетская" title="Египетская Мау" />|
+		<img src="images/3.jpg" alt="Бирманская" title="Бирманская кошка"/>|
+		<img src="images/4.jpg" alt="Персидская" title="Персидская кошка"/>|
+		<img src="images/5.jpg" alt="Сиамская" title="Сиамская кошка"/><br>
 	</div>
 </body>
 </html>
