--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</ul>
 	</nav>
 	<div>
-	<img src="1.jpg" height="600" width="300">
+	<img src="images/1.jpg" height="600" width="300">
 	</div>
 	<div id="div_head">
 		<h1 style="font-size:50px; background-color: #9933ff;"><center>ДОМАШНЯЯ КОШКА</center></h1>
